--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,10 +8,37 @@
     font-family :Inter, Helvetica, sans-serif;
     color: #252f4a;
 }
+
 /* side nav  */
 .rounded_side_nav{
     border-radius: 50px;
+    width: 75px;
+    height: 67vh;
+    position: fixed;
 }
+.offcanvas_width{
+    width: 120px !important;
+}
+.offcanvas_width_two{
+    width: 180px !important;  
+}
+
+.menu.btn:hover {
+    color: var(--bs-btn-hover-color);
+    background-color: transparent !important;
+    border-color: var(--bs-btn-hover-border-color);
+}
+@media screen and (min-width:0px) and (max-width:992px) {
+    .width_nav{
+        width: 100% !important;
+    }
+}
+
+/* container boostrap over wright  */
+@media (min-width: 1400px){
+.container, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
+    max-width: 1405px;
+}}
 
 /* hero bg img  */
 .background_img{
@@ -71,6 +98,23 @@ background-color: var(--bs-light);
     background-color: var(--bs-btn-active-bg);
     border-color: transparent;
 }
+.check_box_size{
+    width: 1.75rem !important;
+    height: 1.75rem !important;
+    border: none !important;
+    background-color: rgba(128, 128, 128, 0.084);
+}
+/* card heading  */
+.card_heading{
+    color: var(--bs-text-gray-900)!important;
+    font-weight: 600!important;
+    font-size: calc(1.1rem)!important;
+}
+.task_text{
+    color: #99a1b7 !important;
+    font-weight: 600;
+    font-size: 15px;
+}
 
 /* form  */
 .data_head .head_style{
@@ -79,6 +123,12 @@ font-weight: 600;
 }
 
 .form-select.form-control-solid {
+    background-color: var(--bs-gray-100);
+    border-color: var(--bs-gray-100);
+    color: var(--bs-gray-700);
+    transition: color .2s ease;
+}
+.form-control.form-control-solid {
     background-color: var(--bs-gray-100);
     border-color: var(--bs-gray-100);
     color: var(--bs-gray-700);
@@ -120,4 +170,18 @@ font-weight: 600;
 }
 .text-area-height{
     height: 210px !important;
+}
+
+.text_check{
+    color: #78829d;
+    font-size: 13px;
+    font-weight: 400;
+    margin-top: 3px;
+}
+
+.form-label_css{
+        font-size: 1.05rem;
+        font-weight: 500;
+        color:#252f4a;
+      
 }
