--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@
 .rounded_side_nav{
     border-radius: 50px;
     width: 75px;
-    height: 67vh;
+    height:450px;
     position: fixed;
 }
 .offcanvas_width{
