--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -201,3 +201,11 @@ font-weight: 600;
     font-size: 1rem!important;
     font-weight: 500!important;
 }
+
+/* nav and tab button  */
+.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+    color: var(--bs-nav-pills-link-active-bg);
+    background-color: transparent;
+    border-bottom: 3px solid var(--bs-nav-pills-link-active-bg) ;
+    border-radius: 0px;
+}
