--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,8 +6,7 @@
     margin: 0px;
     padding: 0px;
     font-family :Inter, Helvetica, sans-serif;
-    color: #252f4a;
-
+    /* color: #252f4a; */
 }
 
 /* side nav  */
