--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -263,3 +263,45 @@ text-decoration:line-through;
     .login_sec_start{
         margin-top: 100px !important;
     }
+
+    /* login page height and scrool for all containers  */
+    .height_admini{
+        height: 500px;
+        overflow-y: scroll;
+    }
+    .height_Airport{
+        height: 240px;
+        overflow-y: scroll;
+    }
+    .h_avsec{
+        height: 245px;
+        overflow-y: scroll; 
+    }
+    .sm_container_Height{
+        height: 495px;
+        overflow-y: scroll;
+    }
+    .height_Airport_2{
+        height: 240px;
+    }
+
+    
+.height_admini::-webkit-scrollbar-track , .height_Airport::-webkit-scrollbar-track , .h_avsec::-webkit-scrollbar-track , .sm_container_Height::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+.height_admini::-webkit-scrollbar , .height_Airport::-webkit-scrollbar , .h_avsec::-webkit-scrollbar , .sm_container_Height::-webkit-scrollbar
+{
+	width: 5px;
+	background-color: #F5F5F5;
+}
+
+.height_admini::-webkit-scrollbar-thumb , .height_Airport::-webkit-scrollbar-thumb , .h_avsec::-webkit-scrollbar-thumb , .sm_container_Height::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #0081b5;
+}
